# telerun

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.sqlx/: query-0125034b9591596868a24565e0827028d1a6684dc1dfc67bbdfdb4884fe7ce87.json  query-0dae98bede43705aeb61fd0935c23152a2e027df33e93870ae83aeeca9ef4985.json  query-1bac28fd3f26ea49e82f22401dac2cb88284e37e564c2436061b3825476dfb26.json  query-361cba2a4dfed276a1a1a5285d98faf9c4bc74f27309f7f4bd590fab0f2cf9c0.json  query-5a3d0c9d6fc2abb00f55f0815326ab31fcabe74adf4eb3d6d20af3ca7d6e54dd.json  query-6100bc13e5ae09fa0ee7de24c9d017da6761440bb56f4de704c6b536eb42c6a0.json  query-6f89962823361c56de89197f98752f621258fc4360146302b812ad0385374ffa.json  query-7b341520c306021a8a5df11727a82506a9d3bce64e28e44e94f4ca3bedad2ea6.json  query-7f393e4deddd78e20cf20bbe5922258e60799316bfd22c8c9058d17338dc38f8.json  query-8d3aa9a674037d772157fda5e3ba14240017aefd9841188eaec4693f078c1f9b.json  query-a70093e25212a95b80a4ffc376aa29d86bbb0b248e20435b7baa28227c23c10a.json  query-ef445b2437974493992e90be55b66135a514cfabb964886617634ab0eec50494.json  query-f1987324ab30e2d14e32e5c8d1963114486c92d13547c43b98419dcbd18957e8.json  query-f6e57469ae6306d7cc7ceeacdad3b3ee6876ebf4727a89badcd62ade36215e82.json  query-fa077bf85599d24f2961d5ab08221ba5ccfb2f24b16be8717e9c6c99e27a004a.json  query-fec91934b8594955965fadaf4c1bc0874e9e209b2dde1ef6515224561e477ede.json
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
migrations/: 20230818165230_schema.sql  20230819101838_schema.sql  20230819143240_schema.sql  20230819143740_schema.sql  20230820141626_schema.sql  20230826131114_schema.sql  20230827162043_schema.sql  20231010143842_schema.sql
src/: bot.rs  database.rs  main.rs  message.rs  models.rs
templates/: list_runs.html  list_runs.j2  list_tally.j2  (+1 more)
(+59 files in other folders)
