[package]
name = "telerunbot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
shuttle-runtime = "0.24.0"
tokio = { version = "1.26.0" }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }
teloxide = { version = "0.12.0", features = ["macros"] }
shuttle-shared-db = { version = "0.24.0", features = ["postgres", "sqlx"] }
shuttle-secrets = "0.24.0"
reqwest = "0.11.18"
